# dodge_rock

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  game_config.toml  game_readme.html  readme.md
assets/text/: game_text.toml
doc/css/: style.css
src/: args.rs  assets.rs  audio.rs  conf.rs  core_state.rs  etc.rs  game_state.rs  input_state.rs  lib.rs  main.rs  view.rs
src/assets/: assets.rs  game_text.rs  mod.rs
tl/: tl_readme.md
tl/english/text/: game_text.toml
